Fix REST routing order
